# CellEye

./: CMakeLists.txt  README.md  main.cpp
doc/: Doxyfile
resources/: resources.qrc
src/: ImageItem.cpp  ImageItem.h  cellEye.cpp  cellEye.h  frameData.cpp  frameData.h  logger.h  plotDialog.cpp  plotDialog.h  pointItem.cpp  pointItem.h  preferencesDialog.cpp  preferencesDialog.h  sessionData.cpp  sessionData.h  utils.h  window.cpp  window.h
src/qt/: main.ui  plot.ui  preferences.ui
